Second round of Julian Stacey's famous Ports Makefiles From Hell(tm).

--- a/comm/Makefile
+++ b/comm/Makefile
@@ -1,4 +1,4 @@
-# /usr/ports/comm/Makefile.inc 0.1	Jan 94	Julian Stacey <stacey@guug.de>
+# /usr/ports/comm/Makefile V2.3	Jan 94	Julian Stacey <stacey@guug.de>
 #	Copyright Julian Stacey, Munich Dec. 93, Free Software, No Liability.
 #	For details see `Legalities' in /sys/Makefile.
 
@@ -9,6 +9,11 @@ G_SUBDIR += flexfax
 SUBDIR += kermit
 SUBDIR += rzsz
 SUBDIR += term
+
+.if !exists(/var/spool/fax)
+beforeinstall:
+	mkdir /var/spool/fax	# for flexfax
+.endif
 
 .include <bsd.subdir_ports.mk>
 
