--- a/game/Makefile
+++ b/game/Makefile
@@ -1,14 +1,12 @@
-# /usr/ports/shell/Makefile V2.3	Jan 94	Julian Stacey <stacey@guug.de>
+# /usr/ports/game/Makefile V2.3	Jan 94	Julian Stacey <stacey@guug.de>
 #	Copyright Julian Stacey, Munich Dec. 93, Free Software, No Liability.
 #	For details see `Legalities' in /sys/Makefile.
 
 SUBDIR =
 G_SUBDIR =
 
-SUBDIR += bash
-SUBDIR += ksh
-SUBDIR += tcsh
-SUBDIR += zsh
+# When jkh or my sup shows what lives here ill expand this dummy makefile
+# stacey@guug.de
 
 .include <bsd.subdir_ports.mk>
 
