--- a/news/Makefile
+++ b/news/Makefile
@@ -1,4 +1,4 @@
-# /usr/ports/news/Makefile.inc 0.1	Jan 94	Julian Stacey <stacey@guug.de>
+# /usr/ports/news/Makefile V2.3	Jan 94	Julian Stacey <stacey@guug.de>
 #	Copyright Julian Stacey, Munich Dec. 93, Free Software, No Liability.
 #	For details see `Legalities' in /sys/Makefile.
 
@@ -13,6 +13,8 @@ SUBDIR += nntp
 #	a client version, type "make install_server"
 #	or "make install_client" respectively.
 #	See README for more details.
+#		Fix This ! nntp/Makefile should at least do one or the other
+#		from `all:'
 
 SUBDIR += slurp
 SUBDIR += trn
