--- a/lang/Makefile
+++ b/lang/Makefile
@@ -1,4 +1,4 @@
-# /usr/ports/lang/Makefile.inc 0.1	Jan 94	Julian Stacey <stacey@guug.de>
+# /usr/ports/lang/Makefile V2.3	Jan 94	Julian Stacey <stacey@guug.de>
 #	Copyright Julian Stacey, Munich Dec. 93, Free Software, No Liability.
 #	For details see `Legalities' in /sys/Makefile.
 
@@ -6,6 +6,11 @@ SUBDIR =
 G_SUBDIR =
 
 .if !defined(AVOID)
+install:
+	@echo "Beware gcc1 make install blasts into where gcc2 lives !"
+	exit 1
+	@# exit 1 so user doesnt think other packages have installed OK
+	@# nate@freefall.cdrom.com might be willing to fix this ?
 SUBDIR += gcc1 #	Not in sup ports dir, but was on Gary's ports CD
 #	==={> gcc1
 #	==={> cc
@@ -13,12 +18,11 @@ SUBDIR += gcc1 #	Not in sup ports dir, but was on Gary's ports CD
 .endif
 
 SUBDIR += perl
-# check to see if make clean fixes this:
-# mv y.tab.h perly.h
-# override mode 644 on perly.h? y
-
+SUBDIR += xlispstat
+SUBDIR += sather
+SUBDIR += sml	# (cd src; makeml -i386 FreeBSD) cd: can't cd to src
 SUBDIR += tcl
-SUBDIR += tclX7.3a
+SUBDIR += tclX
 
 .include <bsd.subdir_ports.mk>
 
