Work with both shared and unshared versions of libtiff and libjpeg

--- a/x11/xv/Makefile
+++ b/x11/xv/Makefile
@@ -306,12 +306,12 @@ BACKING_STORE = -DBACKING_STORE
 
 JPEG = -DHAVE_JPEG
 JPEGDIR = ../jpeg
-LIBJPEG = $(JPEGDIR)/libjpeg.a
+LIBJPEG = -L$(JPEGDIR) -ljpeg
 JPEGINCLUDE = -I$(JPEGDIR)
 
 TIFF = -DHAVE_TIFF
 TIFFDIR = ../tiff
-LIBTIFF = $(TIFFDIR)/libtiff.a
+LIBTIFF = -L$(TIFFDIR) -ltiff
 TIFFINCLUDE = -I$(TIFFDIR)
 
 SYS_LIBRARIES=        $(XLIB) $(LIBJPEG) $(LIBTIFF) -lm
