Replace stracker with tracker

--- a/audio/snd-util/dsp/Makefile
+++ b/audio/snd-util/dsp/Makefile
@@ -8,7 +8,7 @@ BINDIR	= /usr/local/bin
 .c.o:
 	$(CC) -c $(CFLAGS) -o $*.o $<
 
-all: srec stracker_player
+all: srec tracker
 
 install: all
 	cp srec $(BINDIR)
@@ -16,19 +16,19 @@ install: all
 	ln -s $(BINDIR)/srec $(BINDIR)/splay
 	chown root $(BINDIR)/splay $(BINDIR)/srec
 	chmod 755 $(BINDIR)/splay $(BINDIR)/srec
-	(cd stracker_player; make install)
+	(cd tracker; make install)
 
 srec: recplay.o
 	$(LD) $(LDFLAGS) recplay.o -o srec
 
-stracker_player: .done
+tracker: .done
 
 .done:
-	(cd stracker_player; make )
+	(cd tracker; make )
 	touch .done
 
 clean:
 	rm -f $(OBJS) recplay.o srec a.out core .done
-	(cd stracker_player; make clean)
+	(cd tracker; make clean)
 
 recplay.o: recplay.c
