Sync up with Julian S's latest ports Makefile changes.

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -1,4 +1,4 @@
-# /usr/ports/audio/Makefile V2.3	Jan 94	Julian Stacey <stacey@guug.de>
+# /usr/ports/audio/Makefile Thu Feb 17 17:26:04 MEZ 1994	Julian Stacey <stacey@guug.de>
 #	Copyright Julian Stacey, Munich Dec. 93, Free Software, No Liability.
 #	For details see `Legalities' in /sys/Makefile.
 
