--- a/db/Makefile
+++ b/db/Makefile
@@ -1,4 +1,4 @@
-# /usr/ports/db/Makefile V2.3	Jan 94	Julian Stacey <stacey@guug.de>
+# /usr/ports/db/Makefile Thu Feb 17 17:26:04 MEZ 1994	Julian Stacey <stacey@guug.de>
 #	Copyright Julian Stacey, Munich Dec. 93, Free Software, No Liability.
 #	For details see `Legalities' in /sys/Makefile.
 
@@ -9,9 +9,8 @@ G_SUBDIR =
 SUBDIR += ingres
 #	Before compiling, ingres must have a login,
 #	the source must be in ingres's login directory,
-#	and compiling must be done by user ingres
-#	using GCC version 1.x
-#	See the README files for more information.
+#	and compiling must be done by user ingres using GCC version 1.x
+#	See the ingres/README files for more information.
 .endif
 
 .include <bsd.subdir_ports.mk>
