--- a/editor/Makefile
+++ b/editor/Makefile
@@ -1,16 +1,16 @@
-# /usr/ports/editor/Makefile V2.3	Jan 94	Julian Stacey <stacey@guug.de>
+# /usr/ports/editor/Makefile Thu Feb 17 17:26:04 MEZ 1994	Julian Stacey <stacey@guug.de>
 #	Copyright Julian Stacey, Munich Dec. 93, Free Software, No Liability.
 #	For details see `Legalities' in /sys/Makefile.
 
 SUBDIR =
 G_SUBDIR =
 
+SUBDIR += aXe
 SUBDIR += emacs #	make: don't know how to make install. Stop
 SUBDIR += point
 SUBDIR += uemacs
+SUBDIR += vile
 SUBDIR += vim
-SUBDIR += vile	# coming soon
-SUBDIR += aXe	# coming soon
 
 .include <bsd.subdir_ports.mk>
 
