--- a/game/Makefile
+++ b/game/Makefile
@@ -1,12 +1,13 @@
-# /usr/ports/game/Makefile V2.3	Jan 94	Julian Stacey <stacey@guug.de>
+# /usr/ports/game/Makefile Thu Feb 17 17:26:04 MEZ 1994	Julian Stacey <stacey@guug.de>
 #	Copyright Julian Stacey, Munich Dec. 93, Free Software, No Liability.
 #	For details see `Legalities' in /sys/Makefile.
 
 SUBDIR =
 G_SUBDIR =
 
-# When jkh or my sup shows what lives here ill expand this dummy makefile
-# stacey@guug.de
+SUBDIR = golddig
+SUBDIR = seahaven
+SUBDIR = xjewel
 
 .include <bsd.subdir_ports.mk>
 
