--- a/news/Makefile
+++ b/news/Makefile
@@ -1,4 +1,4 @@
-# /usr/ports/news/Makefile V2.3	Jan 94	Julian Stacey <stacey@guug.de>
+# /usr/ports/news/Makefile Thu Feb 17 17:26:04 MEZ 1994	Julian Stacey <stacey@guug.de>
 #	Copyright Julian Stacey, Munich Dec. 93, Free Software, No Liability.
 #	For details see `Legalities' in /sys/Makefile.
 
@@ -6,6 +6,7 @@ SUBDIR =
 G_SUBDIR =
 
 SUBDIR += cnews		# no makefile
+
 WORLD_FIRST_ONLY_DIR += inn
 
 SUBDIR += nntp
