Make all, clean install and pkg now behaves as expected.  The generated pkg isn't tested.  All uses of wish purged (we might not have a $DISPLAY), and dot.gicrc is put in /usr/share/skel instead of arbitrary $HOME.

--- a/devel/gic/Makefile
+++ b/devel/gic/Makefile
@@ -1,19 +1,35 @@
+
 TK_LIBRARY = /usr/local/lib/tk
-#
-all install:
-	cp dot-gicrc ${HOME}/.gicrc
-	cp gic.tcl gic-start.tcl ModalBoxes.tcl FSBox.tcl list_lib.tcl parselog.nawk cvs_log.tcl cvs_diff.tcl ${TK_LIBRARY}
-	chmod a+r ${TK_LIBRARY}/gic.tcl ${TK_LIBRARY}/gic-start.tcl ${TK_LIBRARY}/ModalBoxes.tcl ${TK_LIBRARY}/FSBox.tcl ${TK_LIBRARY}/list_lib.tcl ${TK_LIBRARY}/parselog.nawk ${TK_LIBRARY}/cvs_log.tcl ${TK_LIBRARY}/cvs_diff.tcl
-	echo 'auto_mkindex $$tk_library *.tcl ; exit' | wish
-	@echo "#!/bin/sh" > gic
-	@echo "wish -f " ${TK_LIBRARY}/gic-start.tcl >> gic
-	@chmod +x gic
-	@mv gic /usr/local/bin
+
+LIBFILES = gic.tcl gic-start.tcl ModalBoxes.tcl FSBox.tcl list_lib.tcl \
+	parselog.nawk cvs_log.tcl cvs_diff.tcl
+
+all:
+	@if [ ! -x tclsh -a ! -x /usr/local/bin/tclsh ] ; then ; \
+		echo '"gic" needs tclsh' 1>&2 ; \
+		exit 1 ; \
+	fi
+	@if [ ! -x wish -a ! -x /usr/local/bin/wish ] ; then ; \
+		echo '"gic" needs wish' 1>&2 ; \
+		exit 1 ; \
+	fi
+	cp dot-gicrc dot.gicrc
+	echo "#!/bin/sh" > gic
+	echo "wish -f " ${TK_LIBRARY}/gic-start.tcl >> gic
+
+install: all
+	install -c -m 444 -o bin -g bin $(LIBFILES) $(TK_LIBRARY)
+	install -c -m 444 -o bin -g bin dot.gicrc /usr/share/skel
+	PATH=$$PATH:/usr/local/bin \
+		echo "auto_mkindex ${TK_LIBRARY} *.tcl ; exit" | tclsh
+	install -c -m 555 -o bin -g bin gic /usr/local/bin
 
 clean:
-	rm -f gic
+	rm -f gic dot.gicrc *.tgz
 
+# Not quite perfect.
 pkg:	pkg_bin
 
 pkg_bin: pkg/+DESC pkg/+ONELINE pkg/+PLIST pkg/+REQ pkg/+INST all
-	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST -r pkg/+REQ -i pkg/+INST gic_bin
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST -r pkg/+REQ \
+		-i pkg/+INST gic_bin
