Put in /usr/gnu as it should be, add pkg targets and get around an annoying problem where the config.h file was ignored if its date was the same as config.h.in (which it was) and stopped the make.

--- a/editor/emacs/Makefile.in
+++ b/editor/emacs/Makefile.in
@@ -187,7 +187,13 @@ SUBDIR_MAKEFILES = lib-src/Makefile src/Makefile oldXMenu/Makefile
 COPYDIR = ${srcdir}/etc ${srcdir}/lisp
 COPYDESTS = ${etcdir} ${lispdir}
 
-all:	src/paths.h ${SUBDIR}
+all:	setup src/paths.h ${SUBDIR}
+
+pkg: install
+	pkg_create -d pkg/+DESC -f pkg/+CONTENTS -c pkg/+COMMENT emacs_bin
+
+setup:
+	@if [ -f src/config.h ]; then touch src/config.h; fi
 
 removenullpaths=sed -e 's/^://' -e 's/:$$//' -e 's/::/:/'
 
