--- a/editor/emacs/configure.in
+++ b/editor/emacs/configure.in
@@ -65,7 +65,7 @@ progname="`echo $0 | sed 's:^\./\./:\./:'`"
 ### Establish some default values.
 run_in_place=
 single_tree=
-prefix='/usr/local'
+prefix='/usr/gnu'
 exec_prefix='${prefix}'
 bindir='${exec_prefix}/bin'
 datadir='${prefix}/lib'
